--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,20 @@
   <link rel="icon"
         type="image/x-icon"
         href="favicon.ico">
+  <link href="">
 
 </head>
 <body>
 
   <app-root></app-root>
+  <!--&lt;!&ndash; The core Firebase JS SDK is always required and must be listed first &ndash;&gt;-->
+  <!--<script src="/__/firebase/6.3.0/firebase-app.js"></script>-->
+
+  <!--&lt;!&ndash; TODO: Add SDKs for Firebase products that you want to use-->
+       <!--https://firebase.google.com/docs/web/setup#reserved-urls &ndash;&gt;-->
+
+  <!--&lt;!&ndash; Initialize Firebase &ndash;&gt;-->
+  <!--<script src="/__/firebase/init.js"></script>-->
 
 </body>
 </html>
