--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>JsonForm</title>
-  <base href="/">
+  <base href="https://rishi-garg97.github.io/Json-Form/">
 
   <meta name="viewport"
         content="width=device-width, initial-scale=1">
